--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.application.name=MedicBot
 spring.ai.ollama.chat.options.model=llama3.2:latest
 
 spring.ai.vectorstore.pgvector.initialize-schema=true
+
+# Suppress WARN logs from FileSystemFontProvider
+logging.level.org.apache.pdfbox.pdmodel.font.FileSystemFontProvider=ERROR
+
+#spring.docker.compose.lifecycle-management=start_only
